# internal/transport/http/handlers/admin/router.go
@@ -2,6 +2,7 @@ package admin
 
 import (
 	"github.com/dhucsik/bookers/internal/services/authors"
+	"github.com/dhucsik/bookers/internal/services/books"
 	"github.com/dhucsik/bookers/internal/services/categories"
 	"github.com/dhucsik/bookers/internal/transport/http/middlewares"
 	"github.com/labstack/echo/v4"
@@ -11,17 +12,20 @@ type Controller struct {
 	auth              *middlewares.AuthMiddleware
 	authorService     authors.Service
 	categoriesService categories.Service
+	bookService       books.Service
 }
 
 func NewController(
 	auth *middlewares.AuthMiddleware,
 	authorService authors.Service,
 	categoriesService categories.Service,
+	booksService books.Service,
 ) *Controller {
 	return &Controller{
 		auth:              auth,
 		authorService:     authorService,
 		categoriesService: categoriesService,
+		bookService:       booksService,
 	}
 }
 
@@ -30,4 +34,5 @@ func (r *Controller) Init(router *echo.Group) {
 	router.DELETE("/admin/categories/:id", r.auth.Handler(r.deleteCategory))
 	router.POST("/admin/authors", r.auth.Handler(r.createAuthor))
 	router.DELETE("/admin/authors/:id", r.auth.Handler(r.deleteAuthor))
+	router.POST("/admin/books", r.auth.Handler(r.createBookHandler))
 }
